# compiler-plugins

./: .gitignore  CMakeLists.txt  LICENSE  README.md
clang/: main.cpp  module.cpp  module.hpp
cmake/: Findlibgcc.cmake  Findllvm.cmake
gcc/: main.cpp
