cmake_minimum_required(VERSION 3.0)
project(compiler-plugins VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

find_package(libgcc 10)
if (libgcc_FOUND)
    file(GLOB gccplugin_src "${CMAKE_SOURCE_DIR}/gcc/*")
    add_library(gccplugin SHARED ${gccplugin_src})
    target_link_libraries(gccplugin PUBLIC libgcc::plugin)
endif()

find_package(LLVM 15)
if (LLVM_FOUND)
    include(AddLLVM)
    file(GLOB clangplugin_src "${CMAKE_SOURCE_DIR}/clang/*")
    add_executable(clangplugin ${clangplugin_src})
    target_include_directories(clangplugin PRIVATE ${LLVM_INCLUDE_DIRS})
    target_compile_definitions(clangplugin PRIVATE ${LLVM_DEFINITIONS})
    target_link_libraries(clangplugin PRIVATE LLVM)

    message(STATUS "LLVM defines: ${LLVM_DEFINITIONS}")
endif()