cmake_minimum_required(VERSION 3.25)
project(compiler-plugins VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

find_package(libgcc 12)
if (libgcc_FOUND)
    file(GLOB gccplugin_src "${CMAKE_SOURCE_DIR}/gcc/*")
    add_library(gccplugin SHARED ${gccplugin_src})
    target_link_libraries(gccplugin PUBLIC libgcc::plugin)
endif()

find_package(llvm 15)
if (llvm_FOUND)
    file(GLOB clangplugin_src "${CMAKE_SOURCE_DIR}/clang/*")
    add_executable(clangplugin ${clangplugin_src})
    target_link_libraries(clangplugin PRIVATE clang::Tooling)
endif()